fixed homepage footer, applied text align justify to all tumblr p siblings

--- a/_/scss/style.scss
+++ b/_/scss/style.scss
@@ -1257,7 +1257,6 @@ a.page-active {
     .social-home {
         text-align:center;
         clear:both;
-        position:fixed;
         bottom: 0;
         width:100%;
         //padding-top:$padding*10;
